Fix vizualizer layout issue (TEMP FIX!)
This is a kludge for the layout issue present on the visualizer page. We
really should spend more time figuring out how to layout the search
component and the visualizer harmoniously with the toolbar menu.

--- a/client/src/app/visualization/components/visualization-canvas/visualization-canvas.component.scss
+++ b/client/src/app/visualization/components/visualization-canvas/visualization-canvas.component.scss
@@ -30,13 +30,8 @@
 }
 
 .sidenav-container {
-    height: 100%;
+    height: 90%;
     width: 100%;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    top: 130px;
 }
 
 .sidenav-content {
